// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly at all sizes 1`] = `
<div
  class="w-full mx-auto px-gutter max-w-prose"
>
  <div
    class="p-8 flex items-center justify-center w-full bg-theme-text text-theme-bg"
  >
    content
  </div>
</div>
`;

exports[`renders correctly at all sizes 2`] = `
<div
  class="w-full mx-auto px-gutter max-w-screen-md"
>
  <div
    class="p-8 flex items-center justify-center w-full bg-theme-text text-theme-bg"
  >
    content
  </div>
</div>
`;

exports[`renders correctly at all sizes 3`] = `
<div
  class="w-full mx-auto px-gutter max-w-screen-lg"
>
  <div
    class="p-8 flex items-center justify-center w-full bg-theme-text text-theme-bg"
  >
    content
  </div>
</div>
`;
